[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/upgrade_menu.gd" id="1_upgrade_menu_script"]

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_upgrade_menu_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEVEL UP! CHOOSE UPGRADE"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Increase Speed"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Increase Fire Rate"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Wingman"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
